2010-03-10  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ecl.lisp (*original-sigint-handler*)
	(install-sigint-handler): Deleted; we directly implement
	call-with-user-break-handler instead.
	(call-with-user-break-handler): New. Correctly interrupt main
	thread instead of newly spawned handle-signal thread on SIGINT.
	(make-interrupt-handler): New helper.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (emacs-inspect function): Print closed over variables
	in case of closure.

2010-03-09  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-parse-context): Add defclass.

2010-03-09  Helmut Eller  <heller@common-lisp.net>

	Some more fixes for Allegro

	* swank-allegro.lisp (function-source-location): Use
	xref::object-to-function-name which seems to work better for some
	cases.
	(fspec-definition-locations): For :top-level-forms return a list
	of ((fspec loc)) not just (fspec loc).  Also deal with the file
	vs. buffer issue.
	(ldb-code-to-src-loc): Don't use *temp-file-map* before it is
	declared.
	(pc-source-location): Be a bit more fuzzy when searching the
	code-location for a pc.

2010-03-08  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-extract-context): Add defvar and defparameter.

2010-03-08  Helmut Eller  <heller@common-lisp.net>

	Fix some of the brokeness in the last change.

	* swank-allegro.lisp (frame-source-location): Deal with frames for
	undefined functions better.
	(ldb-code-to-src-loc): Handle temp-files properly.

2010-03-08  Helmut Eller  <heller@common-lisp.net>

	Try to use source-level debugging features in Allegro 8.2

	* swank-allegro.lisp (disassemble-frame): Use undocumented
	debugger::dyn-fd-analyze to figure out the PC and display it.
	(pc-source-location, ldb-code-to-src-loc, longest-common-prefix)
	(source-paths-of): New functions.
	(frame-source-location): Use pc-source-location.  Still far from
	optimal since Allegro rarely records source regions and anonymous